fix: gap between space-form and space-view

--- a/src/components/stars-and-constellations/SpaceOverview.css
+++ b/src/components/stars-and-constellations/SpaceOverview.css
@@ -18,8 +18,8 @@
 .content-wrapper {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
-    gap: 1rem;
+    justify-content: center;
+    gap: 1.5rem;
     height: fit-content;
     width: 100%;
 }
@@ -394,7 +394,6 @@
 @media screen and ( max-width: 1100px ) {
     .content-wrapper {
         flex-direction: column;
-        justify-content: space-evenly;
         align-items: center;
         gap: 2rem;
         height: 100%;
